# pgf2json

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Food.pgf  LICENSE-MIT  README.md  current_zero_output.json  food.json  foods.json  hello.json  issue.md  letters.json  pgf-schema-v1.json  strings.json  ticket.json
_docs-vibe/: prd.md
_temp/: debug_output.txt  food.json  foods.json  letters.json
grammars/: Food.gf  Food.gfo  FoodEng.gf  FoodIta.gf
grammars/Clothes/: Clothes.gfo  Comments.gfo
grammars/Flight/: Flight.gf  Flight.gfo  Flight.pgf  FlightEng.gf  FlightEng.gfo  FlightFre.gf  FlightFre.gfo
grammars/Food/: Food.pgf  FoodEng.gfo  FoodIta.gfo  foods.json  gf_make_generated.json  pgf2json_fixed.json  pgf2json_generated.json  pgf2json_progress.json
grammars/Hello/: Hello.gf  Hello.gfo  Hello.json  HelloEng.gf  HelloEng.gfo  HelloIta.gfo
grammars/Hello/_not_used/: _2Hello.json  _Hello.json
grammars/HelloFromGF-Core/: Hello.gfo  Hello.pgf  HelloEng.gf  HelloEng.gfo  HelloFre.gf  HelloFre.gfo
grammars/Letters/: Letters.gfo  Letters.pgf  LettersCnc.gfo  Strings.gfo  Strings.pgf  StringsBW.gfo  StringsFW.gfo
grammars/Movies/: Movies.gf  Movies.gfo  Movies.json  Movies.pgf  MoviesEng.gf  MoviesEng.gfo  MoviesFre.gf  MoviesFre.gfo  movies_sentences.json  movies_sentences.md
grammars/Pizza/: PizzaOrder.gf  PizzaOrderEng.gf  PizzaOrderFre.gf
grammars/Ticket/: Ticket.gfo  Ticket.json  Ticket.pgf  TicketEng.gfo
grammars/compare/: Zero.gfo  ZeroEng.gfo  ZeroSwe.gfo  correctly_generated_Zero.json  generate_json.sh  generated_Zero.pgf
grammars/synthetic/: foods.json  real_foods.json
src/: d_lib.rs  lib.rs
temp/: compare_zero.rs  current_zero_output.json  hello.json  strings.json  test_conversion.rs  ticket.json
theory/: pgf-schema-v2_1.md
