[package]
name = "pgf2json"
version = "0.1.3"
authors = ["CryptoPatrick <cryptopatrick@gmail.com>"]
description = """
This crate is an Application Programming Interface to load and interpret grammars compiled in Portable Grammar Format (PGF). The PGF format is produced as a final output from the GF compiler. The API is meant to be used for embedding GF grammars in Rust programs.
"""
readme = "README.md"
documentation = "https://docs.rs/pgf2json"
homepage = "https://github.com/CryptoPatrick/pgf2json"
repository = "https://github.com/CryptoPatrick/pgf2json"
keywords = ["pgf", "gf", "grammars", "nlp"]
categories = ["command-line-utilities", "text-processing"]
license = "Unlicense OR MIT"
exclude = [
  "HomebrewFormula",
  "/.github/",
  "/ci/",
  "/pkg/brew",
  "/benchsuite/",
  "/scripts/",
]
edition = "2021"
rust-version = "1.88"

[lints.clippy]
pedantic = "warn"

[dependencies]
byteorder = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bytes = "1.5"
thiserror = "1.0"

[lib]
name = "pgf2json"
path = "src/lib.rs"

